--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   fluttertoast: ^8.2.8
   flutter_gen_runner: ^5.6.0
   flutter_riverpod: ^2.5.1
+  carousel_slider: ^5.0.0
+  percent_indicator: ^4.2.3
+  pie_chart: ^5.4.0
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
